  in codestriker.conf.  This allows for a user-defined repository name
  to be displayed in the codestriker UI, rather than the full
  repository URL.  This can be useful for hiding potentially sensitive
  username/password information that might be a part of the repository
  URL.  See the codestriker.conf file for more information.
  Submitted by Edwin Fine <edwin.m.fine@verizon.com>.

* Update CVS diff parser to handle rdiffs which have new/removed files
  in them.

* Creating a topic with an invalid bug ID is now shown as an error to
  the user on the create topic screen.

* If there was an error creating a topic, the selected project name
  was not retained when the create topic screen was redisplayed.  This
  has now been fixed.
  Submitted by Edwin Fine <edwin.m.fine@verizon.com>.

* If there is a problem when a comment is created, the error message
  will correctly display in the AJAX'ed window.  An example here is if
  $mailhost is incorrectly configured.

* If there is an email problem while creating a topic, the error
  message is now correctly displayed to the end-user.

* Fixed problem with Subversion repositories on Win32, where
  Codestriker was unable to launch the svn program.

* Comments containing '+' characters were changed into ' ' characters
  when posted via AJAX.  Other potentially damaging characters are now
  escaped.

* Comments with '\' characters are now displayed correctly in all
  cases within the tooltip window.

* Temporary files were not being deleted within the
  CodestrikerClient.pm module (used for auto-creation of topics on CVS
  commits).  Reported by Martin Apel <Martin.Apel@softlab.de>.

Version 1.9.1

* Correct problem introduced in 1.9.0 release where the email address
  field in the add comment tooltip was not being stored correctly in
  the Codestriker cookie.  For reviewers who have never created a
  Codestriker topic, the email field not remember the previous value.
  This has now been corrected.
