@@ -20,6 +20,9 @@ $db = 'DBI:mysql:dbname=codestrikerdb';
 # Example of a PostgreSQL database URL using the native Pg driver.
 #$db = 'DBI:Pg:dbname=codestrikerdb';
 
+# Example of a SQLite database URL.  Not fully supported yet.
+#$db = 'DBI:SQLite:dbname=/var/www/codestrikerdb';
+
 # Database user.
 #$dbuser = 'system';
 $dbuser = 'codestriker';
@@ -141,10 +144,13 @@ $codestriker_css = '';
 
      # The next example is for a Perforce repository.  After the
      # leading :perforce identifier, the next two components are the
-     # Perforce user and client parameters.  The last two parameters
+     # Perforce user and password parameters.  The last two parameters
      # after the '@' symbol represent the host and port number of
      # the Perforce server.
-     'perforce:sits:sits2@localhost:1666',
+     'perforce:sits:password@localhost:1666',
+
+     # Same as previous example, but with no password specified.
+     'perforce:sits@localhost:1666',
 
      # The final example is a ClearCase repository, where the path is
      # the location of a shared snapshot view.  From this view, it
